[gd_scene load_steps=9 format=2]

[ext_resource path="res://Images/TTT_Bacground.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Detector.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/TicTacToe.gd" type="Script" id=3]
[ext_resource path="res://Scripts/XOLogic.gd" type="Script" id=4]
[ext_resource path="res://Scenes/WinnerSigboard.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/XOInstancer.gd" type="Script" id=6]
[ext_resource path="res://Font/42______.TTF" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 7 )

[node name="TicTacToe" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 300, 200 )
texture = ExtResource( 1 )

[node name="Board" type="Node" parent="."]

[node name="LeftUp" parent="Board" instance=ExtResource( 2 )]
position = Vector2( 104.118, 92.7714 )

[node name="Up" parent="Board" instance=ExtResource( 2 )]
position = Vector2( 285.656, 91.4365 )

[node name="RightUp" parent="Board" instance=ExtResource( 2 )]
position = Vector2( 472.533, 90.7691 )

[node name="Middle" parent="Board" instance=ExtResource( 2 )]
position = Vector2( 287.658, 210.237 )

[node name="Left" parent="Board" instance=ExtResource( 2 )]
position = Vector2( 99.4455, 210.905 )

[node name="Right" parent="Board" instance=ExtResource( 2 )]
position = Vector2( 478.54, 212.24 )

[node name="LeftDown" parent="Board" instance=ExtResource( 2 )]
position = Vector2( 97.4432, 333.71 )

[node name="Down" parent="Board" instance=ExtResource( 2 )]
position = Vector2( 285.656, 333.71 )

[node name="RightDown" parent="Board" instance=ExtResource( 2 )]
position = Vector2( 479.207, 334.377 )

[node name="XOLogic" type="Node" parent="."]
script = ExtResource( 4 )

[node name="WinnerSignboard" parent="." instance=ExtResource( 5 )]
z_index = 3

[node name="XOInstancer" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Score" type="Label" parent="."]
margin_left = 1.0
margin_top = 2.0
margin_right = 601.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.886275, 0, 0, 1 )
text = "0:0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="clicked" from="Board/LeftUp" to="." method="_on_LeftUp_clicked"]
[connection signal="clicked" from="Board/Up" to="." method="_on_Up_clicked"]
[connection signal="clicked" from="Board/RightUp" to="." method="_on_RightUp_clicked"]
[connection signal="clicked" from="Board/Middle" to="." method="_on_Middle_clicked"]
[connection signal="clicked" from="Board/Left" to="." method="_on_Left_clicked"]
[connection signal="clicked" from="Board/Right" to="." method="_on_Right_clicked"]
[connection signal="clicked" from="Board/LeftDown" to="." method="_on_LeftDown_clicked"]
[connection signal="clicked" from="Board/Down" to="." method="_on_Down_clicked"]
[connection signal="clicked" from="Board/RightDown" to="." method="_on_RightDown_clicked"]
[connection signal="win" from="XOLogic" to="." method="_on_XOLogic_win"]
